# prog_func_avanzada_s8_practicos

repaso-haskell/: CHANGELOG.md  Dockerfile  Makefile  README.md  cabal.project  expresiones.cabal
repaso-haskell/app/: Basico.lhs  Countdown.lhs  Expresiones.lhs  Expresiones2.lhs  Main.hs  Prueba.hs
repaso-haskell/tests/: TestCountdownSpec.hs
soluciones-profe-tareas/: solucionProfeLaboratorio2Monoides.hs  solucionProfeLaboratorio3.hs  solucionProfeLaboratorio4.hs  solucionProfeLaboratorio5.hs  solucionProfeLaboratorio6.hs  solucionProfeLaboratorio7.hs  solucionProfeLaboratorio8.txt  solucionProfeLaboratorio9.hs
tarea-cinco/: ParserExcercises.hs  ParserExcercisesComment.hs  Parsing.hs
tarea-cuatro/: Dockerfile  MonadsExercises.hs  MonadsExercisesComments.hs  README.md
tarea-dos/: Dockerfile  README.md  monoid-exercise.hs  semigroup-exercises.hs  tarea-dos.hs
tarea-nueve/: Composing.hs  Laboratorio.hs  MonadTransformers.hs  MonadTransformers_bruno.hs  cursor_explaining_monad_transformers_in.md
tarea-ocho/: ProgramReasoning.txt  ProgramReasoningComment.txt
tarea-seis/: FoldExcercises.hs  FoldExcercisesComment.hs
tarea-siete/: StrictApplicationExcercises.hs  StrictApplicationExcercisesComment.hs  Testcases.hs
tarea-tres/: ApplicativesExercises.hs  ApplicativesExercisesTest.hs  Dockerfile  FunctorsExercises.hs  FunctorsExercisesTest.hs  README.md  applicatives-exercises.hs  functors-exercises.hs
tarea-uno/: Dockerfile  README.md  a.hs  b.hs  c.hs
