cabal-version:      2.4
name:               expresiones
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         ernesto.copello@fi365.ort.edu.uy

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable expresiones
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Expresiones,
                      Expresiones2,
                      Prueba,
                      Basico,
                      Countdown

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, 
                      containers,

    hs-source-dirs:   app
    default-language: Haskell2010


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       tests, app
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , QuickCheck
